examples/invalid/yir/cpu_move_while_borrowed_invalid.yir
yir 0.1

resource cpu0 cpu.arm64

cpu.null nil cpu0
cpu.const v1 cpu0 10
cpu.alloc_node head_raw cpu0 v1 nil
cpu.move_ptr head cpu0 head_raw
cpu.borrow head_ref cpu0 head
cpu.move_ptr bad_move cpu0 head

edge dep v1 head_raw
edge dep nil head_raw
edge dep head_raw head
edge lifetime head_raw head
edge dep head head_ref
edge dep head bad_move
edge lifetime head bad_move
